==============================================================================
    TAME Changelog
    (C) 2018 Matt Tropiano
==============================================================================

0.9BETA7
........

	- Changed TAMELogic.handleAction(...) to TAMELogic.handleCommand(...).


0.9BETA6
........

	- Fixed an issue in the JS impl: tracing a modal action did not give 
	  proper output.
	- Added trace type INTERNAL for function calls that were compiler-
	  generated, not user-called.
	- Fixed an issue: Header() built-in function did not handle a missing key
	  properly.
	  

0.9BETA5
........

	- Better tracing in Java and JS.
	- Fixed an issue in the JS impl. setting list values.
	- Fixed Operation EMPTY in JS impl.: Returned integer value, not boolean.
	- Fixed Operation CLEARELEMENTVALUE in JS impl.
	- Some HTML-compiled improvements.


0.9BETA4
........

	- Added OnElementBrowse(...) block support for the Browse() function.


0.9BETA3
........

	- Fixed OnActionWith*() fatal error on world in JS implementation.


0.9BETA2
........

	- Refactored TAMECommand, Command, and CommandType: "Command" to 
	  "Operation", plus associated methods.
	- Refactored TAMEAction to "TAMECommand", plus associated methods.


0.9BETA1
........

	- Initial release.