@@ -29,20 +29,20 @@ var InputBox = $Q1("#input-box");
 var OutputBox = $Q1("#output-box");
 var BodyElement = $Q1("body");
 
-function print(text) 
+function print(text, fade) 
 {
 	if (!text)
 		return;
-	OutputBox.appendChild($DOMNew('span',{},[$DOMText(text)]));
+	OutputBox.appendChild($DOMNew('span',fade ? {style:"color:#999;"}:{},[$DOMText(text)]));
 	BodyElement.scrollTop = BodyElement.scrollHeight;
 }
 
-function println(text)
+function println(text, fade)
 {
 	if (!text)
-		print('\n');
+		print('\n', fade);
 	else
-		print(text + '\n');
+		print(text + '\n', fade);
 }
 
 function withEscChars(text) 
@@ -64,7 +64,6 @@ function handleCue(cue)
 
 function readResponse(response)
 {
-	println();
 	println('Interpret time: '+(response.interpretNanos/1000000.0)+' ms');
 	println('Request time: '+(response.requestNanos/1000000.0)+' ms');
 	println('Operations: '+response.operationsExecuted);
@@ -75,6 +74,28 @@ function readResponse(response)
 	
 	if (stop)
 		InputBox.disabled = true;
+}
+
+function inspect(context, input)
+{
+	var split = input.split(/\./);
+	if (split.length < 1 || !split[0] || !split[0].trim())
+	{
+		println("?> Must specify a variable.");
+	}
+	else
+	{
+		var result = TAME.inspect(context, split[0], split[1]);
+		if (result === null)
+		{
+			println("?> Context \""+split[0]+"\" not found.");
+		}
+		else
+		{
+			for (let key in result) if (result.hasOwnProperty(key))
+				println("?> "+key+" = "+result[key]);			
+		}
+	}
 }
 
 BodyElement.onload = function() 
@@ -90,11 +111,16 @@ BodyElement.onload = function()
 			event.preventDefault();
 			var val = InputBox.value;
 			InputBox.value = '';
+			println();
 			println("] "+val);
-			readResponse(TAME.interpret(modulectx, val, trace));
+			if (val.trim().substr(0,1) === '?')
+				inspect(modulectx, val.trim().substring(1));
+			else
+				readResponse(TAME.interpret(modulectx, val, trace));
 		}
 	});
-	
+	println("[[Press Shift+Enter to trace the input command.]]", true);
+	println("[[The inspector is enabled. You may query elements and their values.]]", true);
 	readResponse(TAME.initialize(modulectx));
 	InputBox.focus();
 };
